--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,4 @@
-<!--<script type="module" src="/src/Components/Preview/DevtoolsLoader.tsx"></script>-->
+<script type="module" src="/src/Components/Preview/DevtoolsLoader.tsx"></script>
 <script type="module" src="/src/StorybookFrame/Xebug.ts"></script>
 <script>
   window.global = window;
