Try to bring back react devtools
Didn't work

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,6 @@
-<script type="module" src="/src/Components/Preview/DevtoolsLoader.tsx"></script>
-<script type="module" src="/src/StorybookFrame/Xebug.ts"></script>
 <script>
   window.global = window;
+  window.__DEV__ = false
 </script>
+<script type="module" src="/src/Components/Preview/DevtoolsLoader.tsx"></script>
+<script type="module" src="/src/StorybookFrame/Xebug.ts"></script>
