--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,4 +3,4 @@
   window.__DEV__ = false
 </script>
 <script type="module" src="/src/Components/Preview/DevtoolsLoader.tsx"></script>
-<script type="module" src="/src/StorybookFrame/Xebug.ts"></script>
+<script type="module" src='/src/StorybookFrame/Devtools.ts'></script>
