--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,5 +2,4 @@
   window.global = window;
   window.__DEV__ = false
 </script>
-<script type="module" src="/src/Components/Preview/DevtoolsLoader.tsx"></script>
-<script type="module" src='/src/StorybookFrame/Devtools.ts'></script>
+<script type="module" src='/src/Devtools/Devtools.tsx'></script>
