Overlay kinda works, hot reload doesnt

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,4 +2,4 @@
   window.global = window;
   window.__DEV__ = false
 </script>
-<script type="module" src='/src/Devtools/Devtools.tsx'></script>
+<!--<script type="module" src='/src/Devtools/Devtools.tsx'></script>-->
