Add single line editor

--- a/src/stories/index.html
+++ b/src/stories/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script type="module" src="/node_modules/shlikshlak/dist/hook.js"></script>
+    <script type="module" src="../dist/hook.js"></script>
     <script type="module">
       import { injectIntoGlobalHook } from "/@react-refresh";
       injectIntoGlobalHook(window);
