--- a/src/stories/index.html
+++ b/src/stories/index.html
@@ -3,18 +3,14 @@
   <head>
     <script type="module" src="../dist/hook.js"></script>
     <script type="module">
-      import { injectIntoGlobalHook } from "/@react-refresh";
-      injectIntoGlobalHook(window);
-      window.$RefreshReg$ = () => {};
-      window.$RefreshSig$ = () => (type) => type;
+      import { injectIntoGlobalHook } from '/@react-refresh'
+      injectIntoGlobalHook(window)
+      window.$RefreshReg$ = () => {}
+      window.$RefreshSig$ = () => (type) => type
     </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shlikshluc!!1k</title>
   </head>
